@@ -281,32 +281,53 @@ object {{ServiceName}} { self =>
 
 {{#withFinagle}}
     type FunctionType = {{functionType}}
-    type ServiceType = com.twitter.finagle.Service[Args, Result]
+    type ReqRepFunctionType = {{reqRepFunctionType}}
 
-    type ServiceIfaceServiceType = com.twitter.finagle.Service[Args, SuccessType]
+    type ServiceType = _root_.com.twitter.finagle.Service[Args, Result]
+    type ReqRepServiceType = _root_.com.twitter.finagle.Service[_root_.com.twitter.scrooge.Request[Args], _root_.com.twitter.scrooge.Response[Result]]
+
+    type ServiceIfaceServiceType = _root_.com.twitter.finagle.Service[Args, SuccessType]
+    type ServicePerEndpointServiceType = _root_.com.twitter.finagle.Service[Args, SuccessType]
+    type ReqRepServicePerEndpointServiceType = _root_.com.twitter.finagle.Service[_root_.com.twitter.scrooge.Request[Args], _root_.com.twitter.scrooge.Response[SuccessType]]
 
     def toServiceIfaceService(f: FunctionType): ServiceIfaceServiceType =
-      com.twitter.finagle.Service.mk { args: Args =>
+      _root_.com.twitter.finagle.Service.mk { args: Args =>
         f(args)
+      }
+
+    def toServicePerEndpointService(f: FunctionType): ServicePerEndpointServiceType =
+      _root_.com.twitter.finagle.Service.mk { args: Args =>
+        f(args)
+      }
+
+    def toReqRepServicePerEndpointService(f: ReqRepFunctionType): ReqRepServicePerEndpointServiceType =
+      _root_.com.twitter.finagle.Service.mk[_root_.com.twitter.scrooge.Request[Args], _root_.com.twitter.scrooge.Response[SuccessType]] { request: _root_.com.twitter.scrooge.Request[Args] =>
+        f(request)
       }
 
     private[this] val toResult = (res: SuccessType) => Result({{^isVoid}}Some(res){{/isVoid}})
 
     def functionToService(f: FunctionType): ServiceType =
-      com.twitter.finagle.Service.mk { args: Args =>
+      _root_.com.twitter.finagle.Service.mk { args: Args =>
         f(args).map(toResult)
       }
 
     def serviceToFunction(svc: ServiceType): FunctionType = { args: Args =>
-      com.twitter.finagle.thrift.ThriftServiceIface.resultFilter(this).andThen(svc).apply(args)
+      _root_.com.twitter.finagle.thrift.ThriftServiceIface.resultFilter(this).andThen(svc).apply(args)
     }
 {{/withFinagle}}
 {{^withFinagle}}
     type FunctionType = Nothing
+    type ReqRepFunctionType = Nothing
     type ServiceType = Nothing
+    type ReqRepServiceType = Nothing
     type ServiceIfaceServiceType = Nothing
+    type ServicePerEndpointServiceType = Nothing
+    type ReqRepServicePerEndpointServiceType = Nothing
 
     def toServiceIfaceService(f: FunctionType): ServiceIfaceServiceType = ???
+    def toServicePerEndpointService(f: FunctionType): ServicePerEndpointServiceType = ???
+    def toReqRepServicePerEndpointService(f: ReqRepFunctionType): ReqRepServicePerEndpointServiceType = ???
     def functionToService(f: FunctionType): ServiceType = ???
     def serviceToFunction(svc: ServiceType): FunctionType = ???
 {{/withFinagle}}
